fix misalignment of the top buttons

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,8 @@ input {
 .top-btn-container {
   width: 35%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  margin-right: 158px;
   gap: 30px;
 }
 
